welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:17: error: ';' expected but 'else' found.
}else {f=false}
 ^loneTeen:21: error: Unmatched closing brace '}' ignored here
 }
 ^