welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
var f:Boolean=false
if( hasTeen(a)===hasTeen(b)){
	f=false }
	else {f=true }
return f

}



def hasTeen(a:Int): Boolean = {
	var f:Boolean=false
	if (a<20 && a >12){
		f=true
	}
}else {f=false}
return f 
}
